--- a/css/custom.css
+++ b/css/custom.css
@@ -1,108 +1,424 @@
+/*
+  ## FONTS
+*/
+
+@font-face {
+  font-family: 'EffraLight';
+  src: url('../fonts/effralight.eot');
+  src: url('../fonts/effralight.woff') format('woff'),
+       url('../fonts/effralight.ttf')  format('truetype'),
+       url('../fonts/effralight.svg#effralight') format('svg');
+ font-weight: normal;
+ font-style: normal;
+}
+
+@font-face {
+  font-family: 'Effra';
+  src: url('../fonts/effraregular.eot');
+  src: url('../fonts/effraregular.woff') format('woff'),
+       url('../fonts/effraregular.ttf')  format('truetype'),
+       url('../fonts/effraregular.svg#effraregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'EffraBold';
+  src: url('../fonts/effrabold.eot');
+  src: url('../fonts/effrabold.woff') format('woff'),
+       url('../fonts/effrabold.ttf')  format('truetype'),
+       url('../fonts/effrabold.svg#effrabold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
+/*
+  ## STRUCTURE
+*/
+
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'EffraLight', arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
 }
 
 h1 {
-  font-size: 2em;
-  line-height: 1.25em;
-  color: #C72C48;
+  font-size: 4em;
+  margin-bottom: 0;
+  letter-spacing: 2px;
+}
+
+h2 {
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
 }
 
 h3 {
-  line-height: 1.5em;
-  font-weight: 300;
-  font-size: 1.25em;
+  font-family: 'Effra', arial, sans-serif;
+  letter-spacing: 1px;
 }
 
-.container-vertical {
-  height: 100vh;
-  display: table;
+p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5em;
+}
+
+.btn {
+  font-family: 'EffraBold', arial, sans-serif;
+  border: 2px solid white;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  border-radius: 20px;
+  text-decoration: none;
+  letter-spacing: 1px;
+  color: white;
+}
+
+.btn:hover {
+  background-color: white;
+  color: black;
+}
+
+.btn-solid {
+  background-color: white;
+  color: black;
+}
+
+.btn-solid:hover {
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.centred {
+  color: white;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 0px;
+  padding: 5px 20px;
+  background-color: rgba(255,255,255,0.9);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: black;
+}
+
+.container-section {
+  margin: 0 10%;
+}
+
+.section-intro {
+  text-align: center;
+  padding: 2em 0 4em 0;
+}
+
+.action {
+  margin-top: 2em;
+}
+
+.container-img {
+  width: 100%;
+}
+
+/*
+  ## NAVIGATION
+  ## Sidenav
+*/
+
+.container-sidenav {
+  z-index: 100;
+  position: fixed;
+  top: 47%;
+  right: 30px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circle {
+  border-radius: 5px;
+  border: 1px solid rgba(210,210,210,0.5);
+  width: 5px;
+  height: 5px;
+  margin-bottom: 20px;
+  background: rgba(210,210,210,0.5);
+}
+
+.selected {
+  background: transparent;
+}
+
+/*
+  ## Nav
+*/
+
+ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.nav-left img {
+  width: 250px;
+}
+
+.nav-right {
+  padding-top: 0.5em;
+  float: right;
+}
+
+ul.nav li {
+  float: left;
+}
+
+ul.nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 18px;
+  text-decoration: none;
+}
+
+.mobile-nav {
+  width: 100%;
+  text-align: center;
+  display: none;
+  font-family: 'Effra', arial, sans-serif;
+}
+
+#toggleMenu:hover {
+  cursor: pointer;
+}
+
+/*
+  ## INTRO
+*/
+
+#intro {
+  background-image: url('../images/banner_bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
+  padding-top: 2em;
+}
+
+/*
+  ## Call-to-Action
+*/
+
+.cta-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.cta-arrow {
+  padding-top: 25%;
+  width: 50%;
+}
+
+.cta-arrow:hover {
+  cursor: pointer;
+}
+
+.cta-right {
+  text-align: right;
+}
+
+.cta {
+  margin: 3em 0;
+}
+
+.cta p {
+  margin-bottom: 3em;
+}
+
+.caret {
+  height: 25px;
+}
+
+/*
+  ## Testimonials
+*/
+
+.testimonials {
+  margin-top: 4em;
+  background: rgba(0,0,0,0.3);
+  padding: 2em 2em 3em 2em;
   text-align: center;
 }
 
-@media (max-width: 768px ) {
-  .container-vertical {
-    display: inline-block;
-    margin-top: 3em;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.25em;
-  }
+.quote {
+  margin: 2% 10%;
 }
 
-.container-scroller {
-  height: 100vh;
+.source {
+  font-family: 'Effra', arial, sans-serif;
+  text-transform: uppercase;
+}
+
+/*
+  ## SERVICES
+*/
+
+.featured-service {
+  background-image: url('../images/services_banner_bg.png');
+  background-position: center;
+  background-size: cover;
+  padding: 6em 0 8em 0;
+  margin-bottom: 5px;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 5px;
+}
+
+/*
+  ## BLOG
+*/
+
+.blog-container {
+  text-align: center;
+  padding: 3em 3em 0 3em;
+}
+
+.blog-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 5px;
+}
+
+.blog-img {
   width: 100%;
-  background-image: url('../images/slider-bg.jpg');
-  background-size: 100% auto;
-  background-repeat: repeat-y;
-  background-color: #C72C48;
-  -webkit-animation: animateScroller 150s linear infinite;
-  -moz-animation: animateScroller 150s linear infinite;
-  -o-animation: animateScroller 150s linear infinite;
-  -ms-animation: animateScroller 150s linear infinite;
-  animation: animateScroller 150s linear infinite;
 }
 
-@-webkit-keyframes animateScroller {
-  from { background-position: 0px 8253px }
-  to { background-position: 0px -8253px }
+.blog-title {
+  font-size: 2em;
+  line-height: 1em;
+  margin-bottom: 1em;
 }
 
-@-moz-keyframes animateScroller {
-  from { background-position: 0px 8253px }
-  to { background-position: 0px -8253px }
+.blog-date {
+  margin-top: 1em;
+  letter-spacing: 1px;
 }
 
-@-o-keyframes animateScroller {
-  from { background-position: 0px 8253px }
-  to { background-position: 0px -8253px }
+.blog-container .btn {
+  color: black;
+  border-color: black;
+  margin-top: 2em;
 }
 
-@-ms-keyframes animateScroller {
-  from { background-position: 0px 8253px }
-  to { background-position: 0px -8253px }
+.blog-container .btn:hover {
+  color: white;
+  border-color: white;
+  background-color: black;
+  margin-top: 2em;
 }
 
-@keyframes animateScroller {
-  from { background-position: 0px 8253px }
-  to { background-position: 0px -8253px }
+/*
+  ## CONTACT
+*/
+
+#contact {
+  background-image: url('../images/contact_bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
+  padding: 5em 0;
+  text-align: center;
 }
 
-.middle {
-  display: table-cell;
+.contact-wording p {
+  margin: 1em 0;
+}
+
+.contact-options p {
+  display: inline-block;
+  float: center;
+  margin: 2em 1em;
+}
+
+.contact-options a {
+  color: white;
+  text-decoration: none;
+}
+
+.contact-options img {
+  height: 20px;
+  margin-right: 10px;
   vertical-align: middle;
 }
 
-#logo {
-  height: 15%;
-  margin-bottom: 2em;
+#contact form input {
+  color: black;
+  display: block;
+  margin: 1.25em auto;
+  padding: 10px;
+  width: 40%;
+  border: none;
+  border-radius: 20px;
+  text-align: center;
+  font-family: 'EffraBold', arial, sans-serif;
 }
 
-#social-links {
-  margin-top: 3em;
+#contact form button {
+  margin-top: 2em;
 }
 
-#social-links a {
-  font-size: 1.75em;
-  color: #C72C48;
-  margin: 0 15px;
-}
-
-#social-links a:hover {
+::-webkit-input-placeholder {
   color: black;
 }
-
-/* 404 Page */
-
-h3 a {
-  color: #C72C48;
+:-moz-placeholder {
+  color: black;
+}
+:-moz-placeholder {
+  color: black;
+}
+:-ms-input-placeholder {
+  black;
 }
 
-h3 a:hover {
-  color: black;
+input:focus {
+  outline: 0 !important;
+}
+
+/*
+  ## FOOTER
+*/
+
+footer {
+  background-color: #a8a8a8;
+  font-size: 0.8em;
+  color: white;
+  text-transform: uppercase;
+  padding: 1.5em 0;
+}
+
+footer a {
+  color: white;
   text-decoration: none;
+}
+
+.footer-right {
+  text-align: right;
 }
